# 2Dvisual_odometry

./: CMakeLists.txt  README.md  package.xml
config/: camera.yaml  imu.yaml
include/track_vo/: track_vo.h
launch/: camera_track.launch
rviz/: ICP.rviz  deteccion_pilar.rviz  gps.rviz  homo.rviz  hough.rviz  navegation.rviz  track.rviz  traj.rviz
src/: IMU_orientation.cpp  TrackVO.cpp  ground_truth.cpp  homo_piloting.cpp  navegation.cpp  track_vo.cpp
